# spotify-griptape-tool

./: pyproject.toml
examples/: example.py
spotify_griptape_tool/: __init__.py  tool.py
tests/: test_spotify_griptape_tool.py
